# GameEngine

./: CMakeLists.txt  CMakePresets.json  README.md
GameEngine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h
GameEngine/Cubes/: CMakeLists.txt
GameEngine/Cubes/Cubes/: Cube.cpp  Cube.h  CubeColor.cpp  CubeColor.h  CubeCreator.cpp  CubeCreator.h  CubeTexture.cpp  CubeTexture.h  CubeTextureCreator.cpp  CubeTextureCreator.h  CubeTextureModel.cpp  CubeTextureModel.h
GameEngine/Data/: CMakeLists.txt
GameEngine/Data/Data/: DataColorStruct.h  DataTextureStruct.h  VAOData.cpp  VAOData.h  VAODataCreator.h  VBOColorData.h  VBOData.cpp  VBOData.h  VBOTextureData.cpp  VBOTextureData.h
GameEngine/Graphic/: CMakeLists.txt
GameEngine/Graphic/Graphic/: Camera.cpp  Camera.h  OpenGLApp.cpp  OpenGLApp.h  SDL2App.cpp  SDL2App.h  SDL3App.cpp  SDL3App.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h
GameEngine/Graphic/Graphic/Buffer/: Buffer.cpp  Buffer.h  EBO.cpp  EBO.h  IndexBuffer.cpp  IndexBuffer.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VertexBuffer.cpp  VertexBuffer.h
GameEngine/Libraries/: CMakeLists.txt
GameEngine/Libraries/glad/: CMakeLists.txt
GameEngine/Libraries/glad/include/glad/: glad.h
GameEngine/Libraries/glad/src/: glad.c
GameEngine/Libraries/stb/: CMakeLists.txt
GameEngine/Libraries/stb/Include/stb/: stb_image.h
GameEngine/Math/: CMakeLists.txt
GameEngine/Math/Math/: Matrix.cpp  Matrix.h  Matrix4.cpp  Matrix4.h  Matrix4x4.cpp  Matrix4x4.h  Transformation.cpp  Transformation.h  TransformationMatrix.cpp  TransformationMatrix.h  TransformationMatrix4.cpp  TransformationMatrix4.h  TransformationMatrix4x4.cpp  TransformationMatrix4x4.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h
GameEngine/Math/SIMD_Math/: simd.h
GameEngine/Objects/: CMakeLists.txt
GameEngine/Objects/Objects/: ObjectTexture.cpp  ObjectTexture.h
GameEngine/Shader/: compile.bat  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
